CHANGES
=======

* Change command name for fetching account state
* Get rid of gerritclient side sorting procedure

0.1.0
-----

* Bump version to 0.1.0
* Fix test runner config issues with os-testr 1.0.0
* Update .gitignore
* Add pypi badge to README.md
* Add new 'gerrit project gc-run' command
* Add new 'gerrit project branch reflog show' command
* Add new 'gerrit project child list' command
* Add new 'gerrit project branch delete' command
* Add new 'gerrit project branch create' command
* Add new 'gerrit project branch show' command
* Add new 'gerrit project branch list' command
* Add small changes before package and distribute python-gerritclient
* Add new 'gerrit project repo-statistics show' command
* Add new 'gerrit project head set' command
* Align url path building
* Add new 'gerrit project head show' command
* Add new 'gerrit project parent set' command
* Add new 'gerrit project parent show' command
* Add new 'gerrit project description set' command
* Add new 'gerrit project description show' command
* Add Documentation Status badge
* Add new 'gerrit change fix' command
* Add new 'gerrit change check' command
* Add Sphinx support
* Update 'gerrit change comments list' command
* Add option '-d/--draft' to 'gerrit change comment list' command
* Add new 'gerrit change comment list' command
* Check the response not empty before fetching columns
* Replace special characters in {change_id} using the %xx escape
* Add new 'gerrit change index' command
* Add new 'gerrit change included-in show' command
* Add new 'gerrit change draft publish' command
* Add new 'gerrit change assignee delete' command
* Add new 'gerrit change assignee set' command
* Add new 'gerrit change assignee history show' command
* Add new 'gerrit change assignee show' command
* Add new 'gerrit change delete' command
* Add new 'gerrit change submit' command
* Add new 'gerrit change move' command
* Add new 'gerrit change rebase' command
* Add new 'gerrit change revert' command